<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droidcon NYC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- <string name="base_url">http://192.168.0.104:9000/</string> -->
    <!--<string name="base_url">http://192.168.2.168:9000/</string>-->
    <!--<string name="base_url">http://192.168.2.3:9000/</string>-->
    <!--<string name="base_url">http://droidcon-server.herokuapp.com/</string>-->
    <string name="title_activity_debug_enter_uuid">DebugEnterUuid</string>
    <string name="title_activity_debug_schedule_display">DebugScheduleDisplayActivity</string>
    <string name="google_error">Cannot login with Google. Please contact support.</string>
    <string name="network_error">Network problems...</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_unknown">Unknown error.  Sorry?</string>
    <string name="title_activity_find_user">FindUser</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>

    <!-- drawer copy-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="explore">Explore sessions</string>
    <string name="my_schedule">My schedule</string>
    <string name="map">Map</string>
    <string name="social">Social</string>
    <string name="profile">My Profile</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>

    <!-- welcome copy-->
    <string name="welcome_0_title">Welcome to Droidcon!</string>
    <string name="welcome_1_title">Plan ahead</string>
    <string name="welcome_2_title">Be yourself</string>
    <string name="welcome_3_title">Say hey to our sponsors ...</string>
    <string name="welcome_0_desc">This app will help you navigate the world\'s largest community-driven Android conference</string>
    <string name="welcome_1_desc">Quickly make and manage your schedule to stay on track</string>
    <string name="welcome_2_desc">Fill out your profile and connect with other attendees</string>
    <string name="welcome_3_desc">Sponsors are cool.</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="select_an_account">Select an account</string>
    <string name="choose_account">Please choose an account to use:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- profile copy-->
    <string name="title_activity_edit_user_profile">Edit my profile</string>
    <string name="hint_name">Full name</string>
    <string name="hint_email">Email address</string>
    <string name="public_email">Hide my email address</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_company">Company</string>
    <string name="hint_website">http://yoursite.com</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter handle</string>
    <string name="hint_linkedIn">LinkedIn</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_bio">Bio</string>
    <string name="error_phone">Please enter a valid phone number.</string>
    <string name="error_email">Please enter a valid email address.</string>
    <string name="error_name">Don\'t forget your name!</string>
    <string name="contact">Contact Info</string>
    <string name="privacy">Privacy</string>
    
    <!-- Event Detail -->
    <string name="event_venue_time" >%1$s, %2$s - %3$s</string>
    <string name="event_speaker_name" >Speaker: %1$s</string>
    <string name="event_track" >on the %1$s track</string>
    <string name="event_now" >This session is happening now</string>
    <string name="event_past" >This session has already ended</string>
    <string name="event_conflict" >This session conflicts with another session in your schedule</string>

    <!-- tracks-->
    <string name="filter">Filter</string>
    <string name="tracks">Tracks</string>
    <string name="development">Development</string>
    <string name="design">Design</string>
    <string name="business">Business</string>

    <string name="action_filter">Filters</string>
    <string name="action_search">Find Attendees</string>

    <string name="about_app_header">About the app</string>
    <string name="about_app">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum\n
        Credits\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nExcepteur sint occaecat cupidatat non proident.\n</string>
    <string name="about_con_header">About Droidcon</string>
    <string name="about_con">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum\n
        Credits\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nExcepteur sint occaecat cupidatat non proident.\n</string>
    <string name="about_touch_header">About touchlab</string>
    <string name="about_touch">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum\n
        Credits\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nPersonname Person\nExcepteur sint occaecat cupidatat non proident.\n</string>
    <string name="more">More</string>
    <string name="less">Less</string>

</resources>
