<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent" android:layout_height="match_parent"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/primary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/bg_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_large"
        android:background="@color/white"
        android:elevation="@dimen/padding_small"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/select_an_account"
            android:textColor="@color/sign_in_text_dark"
            android:textSize="@dimen/text_largeish"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/choose_account"
            android:textColor="@color/sign_in_text_light"
            android:textSize="@dimen/text_small"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/padding_small"
              android:background="@drawable/z_depth_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_medium"
            android:elevation="@dimen/padding_tiny"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/cancel"
                android:textColor="@color/sign_in_text_light"/>

            <Button
                android:id="@+id/ok"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="@dimen/padding_small"
                android:text="@string/ok"
                android:textColor="@color/selectable_text"/>
        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/status_bar_height"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</FrameLayout>